<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="com.homesordervendor.util.StringUtil"/>
        <variable
            name="accountInformationVM"
            type="com.homesordervendor.user.accountinformation.viewmodel.AccountInformationVM"/>

        <variable
            name="accountInfo"
            type="com.homesordervendor.user.accountinformation.model.AccountInfo"/>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_3"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/account_information"
                android:textColor="@color/black"
                android:textSize="23sp"
                app:font="@{@string/san_francisco_text_bold}"/>
            <Button
                android:onClick="@{accountInformationVM::onClickClose}"
                android:layout_alignParentRight="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_close_black"/>
        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="2dp">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:scrollbars="none"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/dob_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:theme="@style/TextInputTheme"
                        app:errorEnabled="true">

                        <EditText
                            android:onClick="@{(v) -> accountInformationVM.onClickDate(v,accountInfo)}"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:id="@+id/dob"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/lightGrey"
                            android:inputType="none"
                            android:cursorVisible="false"
                            android:hint="@string/dob"
                            android:text="@={accountInfo.dob}"
                            android:textColor="@android:color/black"
                            app:font="@{@string/san_francisco_text_medium}"
                            android:theme="@style/TextInputTheme" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputTheme"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/lightGrey"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:layoutDirection="ltr"
                            android:maxLines="1"
                            android:text="@={accountInfo.street}"
                            app:font="@{@string/san_francisco_text_medium}"
                            android:textColor="@android:color/black"
                            android:theme="@style/TextInputTheme" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/country_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputTheme"
                        app:errorEnabled="true">

                        <EditText
                            android:onClick="@{(v) -> accountInformationVM.onClickCountry(v,accountInfo)}"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/country"
                            android:cursorVisible="false"
                            android:inputType="none"
                            android:layoutDirection="ltr"
                            android:text="@{StringUtil.getLanguageName(accountInfo.countryNameEN,accountInfo.countryNameAR)}"
                            android:maxLines="1"
                            app:font="@{@string/san_francisco_text_medium}"
                            android:textColor="@android:color/black"
                            android:theme="@style/TextInputTheme" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/city_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputTheme"
                        app:errorEnabled="true">

                        <EditText
                            android:onClick="@{(v) -> accountInformationVM.onClickCity(v,accountInfo)}"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/lightGrey"
                            android:hint="@string/city"
                            android:inputType="text"
                            android:layoutDirection="ltr"
                            android:maxLines="1"
                            android:text="@{accountInfo.city}"
                            app:font="@{@string/san_francisco_text_medium}"
                            android:textColor="@android:color/black"
                            android:theme="@style/TextInputTheme" />
                    </android.support.design.widget.TextInputLayout>


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <android.support.v7.widget.AppCompatRadioButton
                            android:checked="@={accountInfo.male}"
                            android:id="@+id/male"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textAllCaps="false"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/lightGrey"
                            app:buttonTint="@color/lightGrey"
                            android:textSize="12sp"
                            app:font="@{@string/san_francisco_text_medium}"/>


                        <android.support.v7.widget.AppCompatRadioButton
                            android:checked="@={accountInfo.female}"
                            android:id="@+id/female"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textAllCaps="false"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/lightGrey"
                            app:buttonTint="@color/lightGrey"
                            android:textSize="12sp"
                            app:font="@{@string/san_francisco_text_medium}"/>

                        <android.support.v7.widget.AppCompatRadioButton
                            android:visibility="gone"
                            android:checked="@={accountInfo.notspecify}"
                            android:id="@+id/not_specify"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/not_specify"
                            android:textAllCaps="false"
                            android:textColor="@color/lightGrey"
                            app:buttonTint="@color/lightGrey"
                            android:textSize="12sp"
                            app:font="@{@string/san_francisco_text_medium}"/>

                    </RadioGroup>


                    <Button
                        android:onClick="@{(v) -> accountInformationVM.onClickSave(v,accountInfo)}"
                        android:id="@+id/save_btn"
                        style="@style/ButtonTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/save"
                        app:font="@{@string/san_francisco_text_medium}"/>
                </LinearLayout>
            </ScrollView>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</layout>