<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.homesordervendor.util.StringUtil"/>
        <variable
            name="languageSelectionVM"
            type="com.homesordervendor.initialscreen.language.viewmodel.LanguageSelectionVM"/>
        <variable
            name="languageModel"
            type="com.homesordervendor.initialscreen.language.LanguageModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_bg">

            <LinearLayout
                android:layout_above="@+id/version_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_image_view"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_logo_white" />

                <TextView
                    app:font="@{@string/san_francisco_text_medium}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/seller_account"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <TextView
                            app:font="@{@string/san_francisco_text_medium}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="@string/language"
                            android:textColor="@color/font_color_1"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/language_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:theme="@style/TextInputTheme"
                            app:errorEnabled="true">

                            <EditText
                                android:onClick="@{(v) -> languageSelectionVM.onClickLanguageSelection(v,languageModel)}"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                app:font="@{@string/san_francisco_text_medium}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="@color/lightGrey"
                                android:hint="@string/choose_language"
                                android:text="@={languageModel.name}"
                                android:drawableRight="@drawable/ic_down_arrow"
                                android:textColor="@android:color/black"
                                android:theme="@style/TextInputTheme" />
                        </android.support.design.widget.TextInputLayout>


                        <Button
                            app:font="@{@string/san_francisco_text_medium}"
                            android:onClick="@{(v) -> languageSelectionVM.onClickSubmit(v,languageModel)}"
                            android:id="@+id/submit"
                            style="@style/ButtonTheme"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/submit" />



                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                app:font="@{@string/san_francisco_text_medium}"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:id="@+id/version_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@{StringUtil.versionName()}"
                android:textColor="@color/font_color_2"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

</layout>